# rf-with-hardware-testing

./: .gitignore  Dockerfile  example.robot  instructions.md  main.py  pyproject.toml  robocop.toml  training_summary.md  update-slides.ps1  update-slides.sh
firmware/led_blink/: led_blink.ino
firmware/project_02/: project_02.ino
firmware/project_02_custom/: project_02_custom.ino
firmware/project_02_wired_tests/: project_02_wired_tests.ino
firmware/project_03/: project_03.ino
firmware/project_04/: project_04.ino
firmware/project_06/: project_06.ino
firmware/project_07/: project_07.ino
firmware/project_08/: project_08.ino
firmware/project_09/: project_09.ino
firmware/project_10/: project_10.ino
firmware/project_11/: project_11.ino
firmware/project_12/: project_12.ino
firmware/project_13/: project_13.ino
firmware/project_15/: project_15.ino
libraries/: ArduinoLib.py  OperatorLib.py
resources/: ArduinoLib.py  ArduinoListener.py  OperatorLib.py  arduino_keywords.resource  task_001.resource  variables.py
slides/: generic_test_automation_architecture.html  robot_framework_file_architecture.html  robot_framework_for_python_users.html  robot_framework_in_a_nutshell.html  robot_framework_keyword_calls.html  robot_framework_running_tests.html  robot_framework_suite_file.html  robot_framework_variables.html  slides.css
slides/00_meta/: 01_welcome.html  02_agenda.html  03_useful_resources.html
slides/01_intro/: 01_generic_test_automation_architecture.html  02_rf_in_a_nutshell.html  03_suite_file.html  (+2 more)
wiring-configurations/: led-blink.md
(+57 files in other folders)
